Fixed Icon Alignment added background to Link Text

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,7 +65,7 @@ body {
 }
 
 .name {
-    width: 80%;
+    width: calc(100% - 40px);
     padding-left: 5px;
 }
 
@@ -111,12 +111,17 @@ body {
     height: 40px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     font-weight: 500;
+}
+
+.sub-node-name span {
+    display: flex;
+    align-items: center;
 }
 
 .sub-node-name i {
     cursor: pointer;
+    margin-left: 10px;
 }
 
 .sub-node-desc {
